@@ -18,6 +18,9 @@ Breaking Changes
 Changes
 =======
 
+ - Added table function ``generate_series`` that generates a series of numbers
+   from ``start`` to ``end`` by ``step`.`
+
 Fixes
 =====
 
